Resources/public/css/editor.css
body.toolkit {
    padding: 40px 4px;
    padding-bottom: 40px;
}

.modal-dialog {
    width: 70%;
}

.toolkit .modal {
    z-index: 100000;
}

#add-block-modal .single-block-button {
    background: #CCDAE5 none repeat scroll 0 0;
    border-radius: 2px;
    color: #165684;
    display: inline-block;
    font-size: 16px;
    margin: 0 0.3%;
    text-align: center;
    width: 32%;
    padding: 4px;
}

#add-block-modal .single-block-button:hover {
    color: #FFFFFF;
    background: #333333;
}

#add-block-modal .single-block-button:hover .widget-icon {
    color: #333;
}

#add-block-modal .single-block-button.selected {
    border: 3px solid #C00;
    box-shadow: 0 0 10px 1px #C00;
}

#add-block-modal .single-block-button .widget-icon {
    background: #fff none repeat scroll 0 0;
    float: left;
    font-size: 34px;
    padding: 2px;
    text-align: center;
    width: 35%;
}

#add-block-modal .single-block-button .widget-label {
    float: left;
    font-size: 14px;
    line-height: 1em;
    margin-top: 6px;
    padding-left: 4px;
    width: 65%;
}

.ui-sortable-helper {
    box-shadow: 0 0 3px 1px #777;
}

.eight-is-sorting .eight-block-decorator {
    border: solid 2px #FFCECE;
}


@media(max-width: 1024px) {
    .modal-dialog {
        width: 100%;
        margin: 0;
    }

    #add-block-modal .single-block-button {
        width: 42%;
    }
}

#btn-edit-layout-mode {
    left: 1px;
    position: fixed;
    top: 1px;
    z-index: 100000;
    opacity: 0.2;
    background: #3791d6;
    color: #fff;
    border-radius: 2px;
    font-size: 18px;
}

#back-to-list-button {
    left: 38px;
    position: fixed;
    top: 1px;
    z-index: 100000;
    opacity: 0.2;
    background: #3791d6;
    color: #fff;
    border-radius: 2px;
    font-size: 18px;
}

.toolkit #back-to-list-button,
.toolkit #btn-edit-layout-mode {
    opacity: 1;
}

#back-to-list-button:hover,
#btn-edit-layout-mode:hover {
    opacity: 1;
    background-color: #DDDDDD;
    text-decoration: none;
    color: #333333;
}

#page-specs {
    color: #333;
    font-weight: bold;
    padding: 2px 8px;
    position: fixed;
    width: 100%;
    text-align: center;
    bottom: 0;
    z-index: 1000;
    display: none;
    background: #FFFFFF;
}

.toolkit #page-specs {
    display: block;
}

.block-disabled {
    display: none;
}

.toolkit .block-disabled {
    display: block;
    opacity: 0.5;
}

.toolkit .eight-list-decorator > .add-item {
    /*display: block;*/
}

.toolkit a.add-item:after,
.toolkit a.add-item:before {
    content: '' !important;
}

.toolkit .eight-block-decorator {
    min-height: 40px;
    min-width: 120px;
    padding-top: 30px;
    border: dashed 1px #ddd;
}

.toolkit .eight-block-decorator:hover {
    z-index: 100;
}

.toolkit .block-wrapper:hover > .btn-remove-block,
.toolkit .block-wrapper:hover > .btn-edit-variable,
.toolkit .block-wrapper:hover > .btn-edit-block-layout,
.toolkit .block-wrapper:hover > .btn-sort-block,
.toolkit .block-wrapper:hover > .btn-enable-block,
.toolkit .block-wrapper:hover > .btn-disable-block {
    display: block;
}

.btn-edit-variable {
    position: absolute;
    top: 0px;
    right: 148px;
    z-index: 100000;
}

.btn-sort-block {
    position: absolute;
    top: 0px;
    right: 62px;
    z-index: 100000;
}

.btn-move-up-block {
    position: absolute;
    top: 0px;
    right: 118px;
    z-index: 100000;
}

.btn-move-down-block {
    position: absolute;
    top: 0px;
    right: 88px;
    z-index: 100000;
}

.btn-disable-block {
    position: absolute;
    top: 0px;
    right: 30px;
    z-index: 100000;
}

.btn-enable-block {
    position: absolute;
    top: 0px;
    right: 30px;
    z-index: 100000;
    background: #FFBBBB;
}

.btn-remove-block {
    position: absolute;
    top: 0px;
    right: 1px;
    z-index: 100000;
}

.block-label {
    color: #333;
    font-weight: bold;
    margin-top: 10px;
    padding: 0 8px;
    text-transform: uppercase;
    z-index: 100000;
}

.submit-block-edit {
    margin-top: 10px;
    width: 100%;
}

.submit-enable-block-edit {
    margin-top: 10px;
    width: 100%;
}

.block-label .tooltip-inner {
    max-width: 400px;
}

.eight-frame-side {
    width: 1px;
    position: absolute;
    background: #3791d6;
    z-index: 100;
    display: none;
}

.eight-frame-bottom {
    height: 1px;
    background: #3791d6;
    position: absolute;
    display: none;
    z-index: 100;
}

.eight-frame-title {
    height: 26px;
    position: absolute;
    background: #c9e7ff;
    z-index: 100;
    text-align: center;
    /*text-transform: uppercase;*/
    line-height: 30px;
    color: #3791d6;
    font-size: 11px;
    display: none;
    overflow-y: hidden;
    padding-left: 6px;
    padding-right: 6px;
}

.eight-frame-title.eight-static-frame-title {
    background: #C4FFC9;
    color: #29a033;
}

.eight-block-decorator {
    position: relative;
}

.add-item {
    position: relative;
    background: #c9e7ff none repeat scroll 0 0;
    /*border-radius: 2px;*/
    display: none;
    font-weight: bold;
    padding: 4px 8px;
    z-index: 100;
    color: #005282;
    clear: both;
    font-weight: normal;
    margin: 10px;
}

.add-item:hover,
.add-item:focus {
    background-color: #3791d6 !important;
    text-decoration: none;
    color: #ffffff;
    border-color: #333;
}

.add-item.add-item-static {
    border-color: #29a033 !important;
    background: #C4FFC9 none repeat scroll 0 0 !important;
    color: #29a033;
}

.add-item.add-item-static:hover {
    background-color: #29a033 !important;
    text-decoration: none;
    color: #ffffff;
}

.toolkit .eight-block-decorator .eight-ui-button {
    background: #3791d6 none repeat scroll 0 0;
    padding: 6px 8px;
    min-width: 26px;
    font-size: 16px;
    color: #ffffff;
    line-height: 1em !important;
    text-align: center;
}

.toolkit .eight-block-decorator .eight-ui-button span {
    margin: 0;
    display: inline-block;
    min-width: 12px;
    text-align: center;
    line-height: 1em !important;
}

.eight-block-decorator .eight-ui-button:hover {
    background-color: #BBBBBB;
    text-decoration: none;
    color: #333;
}

.eight-toolbar {
    position: absolute;
    height: 20px;
    position: absolute;
    z-index: 1000;
    display: none;
    right: 0;
    top: 0;
}

.toolkit .eight-frame-element,
.toolkit .eight-frame-title,
.toolkit .eight-frame-side,
.toolkit .eight-frame-bottom,
.toolkit .eight-toolbar {
    display: block;
}

.toolkit .add-item {
    display: block !important;
    margin-bottom: 40px;
    max-width: 360px;
}

.toolkit .toolkit-relative,
.toolkit.toolkit-relative {
    position: relative;
}

.toolkit.toolkit-relative.modal-open {
    position: static;
}

.toolkit .eight-list-decorator {
    /*margin-top: 40px !important;*/
    /*border: dashed 1px #3791d6;*/
    /*padding-top: 60px !important;*/
    margin-bottom: 40px !important;
    padding-bottom: 50px !important;
}

.modal-title {
    margin-right: 30px;
}

.select-icon-container {
    position: relative;
    margin-bottom: 10px;
}

.icon-selection-list {
    background: #fff none repeat scroll 0 0;
    padding: 0 0 0 20px;
    position: absolute;
    width: 80%;
    z-index: 1000;
    border: solid 1px #CCC;
}

.icon-selection-list:before {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    left: -41px;
    top: 0px;
    border: 20px solid;
    border-color: transparent #CCC transparent transparent;
}

.icon-selection-list:after {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    left: -40px;
    top: 0;
    border: 20px solid;
    border-color: transparent #fff transparent transparent;
}

.icon-selection-list-inner {
    max-height: 500px;
    overflow-y: auto;
}

.icon-selection-list .selection-close {
    font-size: 36px;
    position: absolute;
    right: 20px;
    top: 10px;
}

.select-icon-btn {
    display: inline-block;
    margin: 2px 0 0 20px;
    vertical-align: top;
}

.icon-preview {
    font-size: 32px;
}

.icon-selection-list .icon-choice {
    display: inline-block;
    font-size: 16px;
    margin: 1%;
    padding: 4px;
    width: 30%;
}

.icon-selection-list .icon-choice:hover {
    background: #EEE;
}

.icon-selection-list .icon-choice span {
    font-size: 32px;
    vertical-align: middle;
}

#loading {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 12000;
    background: rgba(0,0,0,0.7);
}

#loading img {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -150px;
    margin-left: -150px;
    -webkit-animation: rotation 4s infinite linear;
}

.ui-widget-content {
    background: #222;
    opacity: 1;
    color: #eee;
    font-weight: normal;
    font-size: 12px;
    font-family: helvetica;
    box-shadow: none;
    border: none;
}

@-webkit-keyframes rotation {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(359deg);
    }
}

